描画が完了 DrawTexture関数を改良

--- a/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
+++ b/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
@@ -116,5 +116,8 @@
     <ClInclude Include="Src\FileReader\FileReader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Src\Data\GameData.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
