クラスを利用した描画に成功！ Enemy,Playerともに完了

--- a/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj
+++ b/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Src\Scene\Title\TitleScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Src\Data\Accessor.h" />
     <ClInclude Include="Src\Data\GameData.h" />
     <ClInclude Include="Src\FileReader\FileReader.h" />
     <ClInclude Include="Src\Actor\Character\Player\Player.h" />
