--- a/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
+++ b/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
@@ -101,9 +101,6 @@
     <ClInclude Include="Src\Map\Map.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Src\Actor\Character\CharacterBase.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="Src\Actor\Block\Block.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -120,6 +117,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Src\Data\Accessor.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Actor\ActorBase.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
