--- a/チェルノブイリ実験場/チェルノブイリ実験場/チェルノブイリ実験場.vcxproj
+++ b/チェルノブイリ実験場/チェルノブイリ実験場/チェルノブイリ実験場.vcxproj
@@ -20,36 +20,37 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
-    <ProjectGuid>{863BA2A8-9AE2-435E-A37C-4B3C59EDF9B2}</ProjectGuid>
-    <RootNamespace>MarioMakerME</RootNamespace>
+    <ProjectGuid>{3722545A-CFB9-4439-B3DA-D67A1759737F}</ProjectGuid>
+    <RootNamespace>チェルノブイリ実験場</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ActorManager実験</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v142</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
-    <CharacterSet>MultiByte</CharacterSet>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -69,22 +70,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -93,8 +79,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -105,8 +90,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
-      <AdditionalDependencies>d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -119,10 +103,9 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -135,52 +118,13 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Windows</SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>d3d9.lib;d3dx9.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Src\Actor\ActorManager.cpp" />
-    <ClCompile Include="Src\FileReader\FileReader.cpp" />
-    <ClCompile Include="Src\Actor\Character\Player\Player.cpp" />
-    <ClCompile Include="Src\Actor\Character\Enemy\Enemy.cpp" />
-    <ClCompile Include="Src\Actor\Block\Block.cpp" />
-    <ClCompile Include="Src\Map\Map.cpp" />
-    <ClCompile Include="Src\Engine\Device.cpp" />
-    <ClCompile Include="Src\Engine\Graphics\DirectX.cpp" />
-    <ClCompile Include="Src\Engine\Graphics\Drawer2D.cpp" />
-    <ClCompile Include="Src\main.cpp" />
-    <ClCompile Include="Src\Scene\GameMain\GameScene.cpp" />
-    <ClCompile Include="Src\Scene\Result\ResultScene.cpp" />
-    <ClCompile Include="Src\Scene\SceneController.cpp" />
-    <ClCompile Include="Src\Scene\Title\TitleScene.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Src\Actor\ActorBase.h" />
-    <ClInclude Include="Src\Actor\ActorManager.h" />
-    <ClInclude Include="Src\Data\Accessor.h" />
-    <ClInclude Include="Src\Data\GameData.h" />
-    <ClInclude Include="Src\FileReader\FileReader.h" />
-    <ClInclude Include="Src\Actor\Character\Player\Player.h" />
-    <ClInclude Include="Src\Actor\Character\Enemy\Enemy.h" />
-    <ClInclude Include="Src\Actor\Block\Block.h" />
-    <ClInclude Include="Src\Map\Map.h" />
-    <ClInclude Include="Src\Engine\Device.h" />
-    <ClInclude Include="Src\Engine\Graphics\DirectX.h" />
-    <ClInclude Include="Src\Engine\Graphics\Drawer2D.h" />
-    <ClInclude Include="Src\Scene\GameMain\GameScene.h" />
-    <ClInclude Include="Src\Scene\Result\ResultScene.h" />
-    <ClInclude Include="Src\Scene\SceneBase.h" />
-    <ClInclude Include="Src\Scene\SceneController.h" />
-    <ClInclude Include="Src\Scene\SceneID.h" />
-    <ClInclude Include="Src\Scene\Title\TitleScene.h" />
-    <ClInclude Include="Src\Utility\Debug.h" />
-    <ClInclude Include="Src\Utility\SingletonTemplate.h" />
-    <ClInclude Include="Src\Utility\Size.h" />
-    <ClInclude Include="Src\Utility\Vec2.h" />
-    <ClInclude Include="Src\Utility\Vec3.h" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
