--- a/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
+++ b/MyEngine_ver/MarioMaker_ME/MarioMaker_ME/MarioMaker_ME.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClCompile Include="Src\Utility\Calculator\Calculator.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Camera\Camera.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Src\Engine\Graphics\DirectX.h">
@@ -132,6 +135,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Src\Utility\Calculator\Calculator.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Camera\Camera.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
